updates for sass

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Qwigley&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="dist/style.css" />
   </head>
   <body>
     <!-- Home Section -->
@@ -138,6 +138,7 @@
           <div class="leftBoxText">
             <h2>Come Say Hi!</h2>
             <p class="blue indent">Add your info</p>
+            <br />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sunt voluptas voluptates animi alias reprehenderit quam, facilis, magnam in a
               beatae doloribus? Quae, eius tempore.
