add home button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <img src="./img/Arch Image.svg" class="mainImage" alt="Painting" />
       </div>
     </div>
+    <div class="return">X</div>
 
     <!-- Portfolio Section -->
     <div id="portfolio" class="section portfolio">
