add functionality to return button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="./img/Arch Image.svg" class="mainImage" alt="Painting" />
       </div>
     </div>
-    <div class="return">X</div>
+    <div id="return" class="return">X</div>
 
     <!-- Portfolio Section -->
     <div id="portfolio" class="section portfolio">
@@ -57,11 +57,13 @@
             <div class="projectImage"></div>
             <div class="projectLinks">Links</div>
           </div>
+          <!--
           <div class="project">
             <div class="projectTitle">Application</div>
             <div class="projectImage"></div>
             <div class="projectLinks">Links</div>
           </div>
+          -->
         </div>
         <div class="projectRow">
           <div class="project">
@@ -74,11 +76,13 @@
             <div class="projectImage"></div>
             <div class="projectLinks">Links</div>
           </div>
+          <!--
           <div class="project">
             <div class="projectTitle">Application</div>
             <div class="projectImage"></div>
             <div class="projectLinks">Links</div>
           </div>
+          -->
         </div>
       </div>
     </div>
