add mouseover text to icons

--- a/index.html
+++ b/index.html
@@ -22,24 +22,15 @@
       </div>
       <div class="intro">
         <h1 class="blue">Hey, Im Steve!</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quisquam iste aperiam quibusdam laborum labore rem neque praesentium possimus
-          voluptatum? Aliquam sint officia quibusdam iure?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quisquam iste aperiam quibusdam laborum labore rem neque praesentium possimus
-          voluptatum? Aliquam sint officia quibusdam iure?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quisquam iste aperiam quibusdam laborum labore rem neque praesentium possimus
-          voluptatum? Aliquam sint officia quibusdam iure?
-        </p>
+        <p>I have worked in the medical architecture field for 14+ years and am now changing gears to work in web & software development.</p>
+        <p>I've decided to move on from architecture and persue my passions on working in the tech industry.</p>
+        <p>Here is a little bit of information to let you know a bit more about me and my journey into tech.</p>
       </div>
       <div id="introSvg" class="introSvg">
         <img src="./img/Arch Image.svg" class="mainImage" alt="Painting" />
       </div>
     </div>
-    <div id="return" class="return">X</div>
+    <div id="return" class="return">Home</div>
 
     <!-- Portfolio Section -->
     <div id="portfolio" class="section portfolio">
@@ -94,18 +85,15 @@
         <h2 class="sectionTitle">About Me</h2>
         <p class="sectionSubTitle blue">My Story</p>
         <div class="aboutMeBox">
-          <p>I have worked in the architecture field for 14 years and am looking to become a web designer & software developer.</p>
-          <p>I enjoy puzzles and automation</p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat ad repellendus minus at molestias, harum omnis blanditiis accusamus distinctio
-            possimus dolor doloremque labore sit?
-          </p>
+          <p>I have worked in the medical architecture field for 14 years and am now changing gears to work in web & software development.</p>
+          <p>I have always had an interest in tech even when working in the construction / architecture industry.</p>
+          <p>Included with that is over 10+ years of experience working with various clients to discuss and realize ideas into real life applications.</p>
+          <p>I enjoy automation and the challenge of breaking apart the overall process into individual steps .</p>
           <br />
           <p>My Hobbies</p>
           <ul>
             <li>Photography</li>
             <li>Mountain Biking</li>
-            <li>Lego</li>
           </ul>
           <br />
           <p class="blue indent">My Education</p>
@@ -118,19 +106,55 @@
         <h2>Relevant Technologies</h2>
         <div class="techBackground">
           <div class="techBox">
-            <span class="iconify htmlIcon" data-icon="akar-icons:html-fill" title-attribute="html"></span>
-            <span class="iconify" data-icon="akar-icons:css-fill"></span>
-            <span class="iconify" data-icon="akar-icons:sass-fill"></span>
-            <span class="iconify" data-icon="akar-icons:bootstrap-fill"></span>
+            <div class="iconContainer">
+              <span class="iconify htmlIcon" data-icon="akar-icons:html-fill" title-attribute="html"></span>
+              <div>HTML</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:css-fill"></span>
+              <div>CSS</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:sass-fill"></span>
+              <div>Sass</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:bootstrap-fill"></span>
+              <div>Bootstrap</div>
+            </div>
             <!--<span class="iconify" data-icon="bxl:tailwind-css"></span> -->
-            <span class="iconify" data-icon="akar-icons:javascript-fill"></span>
-            <span class="iconify" data-icon="akar-icons:react-fill"></span>
-            <span class="iconify" data-icon="bxl:nodejs"></span>
-            <span class="iconify" data-icon="bxl:mongodb"></span>
-            <span class="iconify" data-icon="teenyicons:c-sharp-outline"></span>
-            <span class="iconify" data-icon="akar-icons:python-fill"></span>
-            <span class="iconify" data-icon="akar-icons:github-fill"></span>
-            <span class="iconify" data-icon="akar-icons:figma-fill"></span>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:javascript-fill"></span>
+              <div>Javascript</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:react-fill"></span>
+              <div>React</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="bxl:nodejs"></span>
+              <div>Node JS</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="bxl:mongodb"></span>
+              <div>MongoDB</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="teenyicons:c-sharp-outline"></span>
+              <div>C#</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:python-fill"></span>
+              <div>Python</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:github-fill"></span>
+              <div>Github</div>
+            </div>
+            <div class="iconContainer">
+              <span class="iconify" data-icon="akar-icons:figma-fill"></span>
+              <div>Figma</div>
+            </div>
           </div>
         </div>
       </div>
