--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Qwigley&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
@@ -169,10 +170,7 @@
             <h2>Come Say Hi!</h2>
             <p class="blue indent">Add your info</p>
             <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sunt voluptas voluptates animi alias reprehenderit quam, facilis, magnam in a
-              beatae doloribus? Quae, eius tempore.
-            </p>
+            <p>Let me know if you have any questions, comments or just want to say hi!</p>
           </div>
         </div>
         <div class="formBox">
