update look at project section

--- a/public/index.html
+++ b/public/index.html
@@ -45,17 +45,26 @@
             <div class="project">
               <div class="projectTitle">E-Commerce Application</div>
               <div class="projectImage"></div>
-              <div class="projectLinks">Links</div>
+              <div class="projectLinks">
+                <a href="#"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
+                <a href="#"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+              </div>
             </div>
             <div class="project">
               <div class="projectTitle">Coloring Book Application</div>
               <div class="projectImage"></div>
-              <div class="projectLinks">Links</div>
+              <div class="projectLinks">
+                <a href="#"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
+                <a href="#"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+              </div>
             </div>
             <div class="project">
               <div class="projectTitle">Bidding Application</div>
               <div class="projectImage"></div>
-              <div class="projectLinks">Links</div>
+              <div class="projectLinks">
+                <a href="#"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
+                <a href="#"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+              </div>
             </div>
           </div>
         </div>
