--- a/public/index.html
+++ b/public/index.html
@@ -44,26 +44,32 @@
           <div class="projectRow">
             <div class="project">
               <div class="projectTitle">E-Commerce Application</div>
-              <div class="projectImage"></div>
+              <div class="projectImage">
+                <a href="#"><img src="./img/ProjectImages/OnlineStoreScreenshot.png" /></a>
+              </div>
               <div class="projectLinks">
-                <a href="#"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
-                <a href="#"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+                <a href="https://github.com/JustSteve2k/online-store"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
+                <a href="https://onlinestore-cb346.web.app"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
               </div>
             </div>
             <div class="project">
               <div class="projectTitle">Coloring Book Application</div>
-              <div class="projectImage"></div>
+              <div class="projectImage">
+                <a href="#"> <img src="./img/ProjectImages/ColoringBookScreenshot.png" /></a>
+              </div>
               <div class="projectLinks">
-                <a href="#"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
-                <a href="#"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+                <a href="https://github.com/JustSteve2k/ColoringBook"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
+                <a href="https://coloring-book-26967.web.app/"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
               </div>
             </div>
             <div class="project">
               <div class="projectTitle">Bidding Application</div>
-              <div class="projectImage"></div>
+              <div class="projectImage">
+                <a href="#"> <img src="./img/ProjectImages/BiddingCalculatorScreenshot.png" /></a>
+              </div>
               <div class="projectLinks">
-                <a href="#"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
-                <a href="#"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+                <a href="https://github.com/JustSteve2k/BidCalculator"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
+                <a href="https://bid-calculator-f20ff.web.app"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
               </div>
             </div>
           </div>
