update links to projects

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
             <div class="project">
               <div class="projectTitle">E-Commerce Application</div>
               <div class="projectImage">
-                <a href="#"><img src="./img/ProjectImages/OnlineStoreScreenshot.png" /></a>
+                <a href="https://onlinestore-cb346.web.app"><img src="./img/ProjectImages/OnlineStoreScreenshot.png" /></a>
               </div>
               <div class="projectLinks">
                 <a href="https://github.com/JustSteve2k/online-store"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
@@ -55,7 +55,7 @@
             <div class="project">
               <div class="projectTitle">Coloring Book Application</div>
               <div class="projectImage">
-                <a href="#"> <img src="./img/ProjectImages/ColoringBookScreenshot.png" /></a>
+                <a href="https://coloring-book-26967.web.app/"> <img src="./img/ProjectImages/ColoringBookScreenshot.png" /></a>
               </div>
               <div class="projectLinks">
                 <a href="https://github.com/JustSteve2k/ColoringBook"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
@@ -65,7 +65,7 @@
             <div class="project">
               <div class="projectTitle">Bidding Application</div>
               <div class="projectImage">
-                <a href="#"> <img src="./img/ProjectImages/BiddingCalculatorScreenshot.png" /></a>
+                <a href="https://bid-calculator-f20ff.web.app"> <img src="./img/ProjectImages/BiddingCalculatorScreenshot.png" /></a>
               </div>
               <div class="projectLinks">
                 <a href="https://github.com/JustSteve2k/BidCalculator"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
