--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
           <a href="#portfolio">Portfolio</a>
           <a href="#aboutMe">About Me</a>
           <a href="#contact">Contact</a>
-          <a href="#contact" class="resumeButton">Resume</a>
+          <a href="./img/Resume.pdf" class="resumeButton">Resume</a>
         </div>
         <div class="intro">
           <h1 class="introHeader">Hey, Im Steve!</h1>
-          <p class="introLine">Started off with Architecture</p>
-          <p class="introLine">Decided to do change gears</p>
-          <p class="introLine">Here I am now.</p>
+          <p class="introLine">Started off with Architecture,</p>
+          <p class="introLine">I've decided to do change gears</p>
+          <p class="introLine">and persue web development.</p>
         </div>
         <div id="introSvg" class="introSvg">
           <img src="./img/Arch Image.svg" class="mainImage" alt="Painting" />
@@ -158,11 +158,11 @@
     <section>
       <div id="contact" class="section contact">
         <h2 class="sectionTitle">Contact Me</h2>
+        <p class="sectionSubTitle blue">Add your Info</p>
         <div class="contactMainBox">
           <div class="leftBox">
             <div class="leftBoxText">
               <h2>Come Say Hi!</h2>
-              <p class="blue indent">Add your info</p>
               <br />
               <p>Let me know if you have any questions, comments or just want to say hi!</p>
             </div>
@@ -188,6 +188,6 @@
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
