updates for accessability

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta description="personal portfolio site showcasing a few of my personal projects. " />
     <title>My Portfolio</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -45,31 +46,58 @@
             <div class="project">
               <div class="projectTitle">E-Commerce Application</div>
               <div class="projectImage">
-                <a href="https://onlinestore-cb346.web.app"><img src="./img/ProjectImages/OnlineStoreScreenshot.png" /></a>
+                <a href="https://onlinestore-cb346.web.app"
+                  ><img
+                    src="./img/ProjectImages/OnlineStoreScreenshot.png"
+                    alt="Online Store Screenshot and Link"
+                    aria-label="Link to live demo for online store."
+                /></a>
               </div>
               <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/online-store"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
-                <a href="https://onlinestore-cb346.web.app"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+                <a href="https://github.com/JustSteve2k/online-store"
+                  ><span class="iconify" data-icon="radix-icons:github-logo" aria-label="Link to Github for online store."></span
+                ></a>
+                <a href="https://onlinestore-cb346.web.app"
+                  ><span class="iconify" data-icon="material-symbols:live-tv" aria-label="Link to live demo for online store."></span
+                ></a>
               </div>
             </div>
             <div class="project">
               <div class="projectTitle">Coloring Book Application</div>
               <div class="projectImage">
-                <a href="https://coloring-book-26967.web.app/"> <img src="./img/ProjectImages/ColoringBookScreenshot.png" /></a>
+                <a href="https://coloring-book-26967.web.app/">
+                  <img
+                    src="./img/ProjectImages/ColoringBookScreenshot.png"
+                    alt="Coloring Book Screenshot and Link"
+                    aria-label="Link to live demo for coloring book."
+                /></a>
               </div>
               <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/ColoringBook"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
-                <a href="https://coloring-book-26967.web.app/"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+                <a href="https://github.com/JustSteve2k/ColoringBook"
+                  ><span class="iconify" data-icon="radix-icons:github-logo" aria-label="Link to Github for coloring book."></span
+                ></a>
+                <a href="https://coloring-book-26967.web.app/"
+                  ><span class="iconify" data-icon="material-symbols:live-tv" aria-label="Link to live demo for coloring book."></span
+                ></a>
               </div>
             </div>
             <div class="project">
               <div class="projectTitle">Bidding Application</div>
               <div class="projectImage">
-                <a href="https://bid-calculator-f20ff.web.app"> <img src="./img/ProjectImages/BiddingCalculatorScreenshot.png" /></a>
+                <a href="https://bid-calculator-f20ff.web.app">
+                  <img
+                    src="./img/ProjectImages/BiddingCalculatorScreenshot.png"
+                    alt="Bid Calculator Screenshot and Link"
+                    aria-label="Link to live demo for bid calculator."
+                /></a>
               </div>
               <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/BidCalculator"><span class="iconify" data-icon="radix-icons:github-logo"></span></a>
-                <a href="https://bid-calculator-f20ff.web.app"><span class="iconify" data-icon="material-symbols:live-tv"></span></a>
+                <a href="https://github.com/JustSteve2k/BidCalculator"
+                  ><span class="iconify" data-icon="radix-icons:github-logo" aria-label="Link to Github for Bid Calculator."></span
+                ></a>
+                <a href="https://bid-calculator-f20ff.web.app"
+                  ><span class="iconify" data-icon="material-symbols:live-tv" aria-label="Link to live demo for bid calculator."></span
+                ></a>
               </div>
             </div>
           </div>
@@ -162,7 +190,7 @@
         <div class="contactMainBox">
           <div class="leftBox">
             <div class="leftBoxText">
-              <h2>Come Say Hi!</h2>
+              <h2>Lets Chat!</h2>
               <br />
               <p>Let me know if you have any questions, comments or just want to say hi!</p>
             </div>
