--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta description="personal portfolio site showcasing a few of my personal projects. " />
+    <meta name="description" content="personal portfolio site showcasing a few of my personal projects." />
     <title>My Portfolio</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -46,58 +46,49 @@
             <div class="project">
               <div class="projectTitle">E-Commerce Application</div>
               <div class="projectImage">
-                <a href="https://onlinestore-cb346.web.app"
-                  ><img
-                    src="./img/ProjectImages/OnlineStoreScreenshot.png"
-                    alt="Online Store Screenshot and Link"
-                    aria-label="Link to live demo for online store."
-                /></a>
+                <a href="https://onlinestore-cb346.web.app" aria-label="Link to live demo for online store.">
+                  <img src="./img/ProjectImages/OnlineStoreScreenshot.png" alt="Online Store Screenshot and Link" />
+                </a>
               </div>
               <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/online-store"
-                  ><span class="iconify" data-icon="radix-icons:github-logo" aria-label="Link to Github for online store."></span
-                ></a>
-                <a href="https://onlinestore-cb346.web.app"
-                  ><span class="iconify" data-icon="material-symbols:live-tv" aria-label="Link to live demo for online store."></span
-                ></a>
+                <a href="https://github.com/JustSteve2k/online-store" aria-label="Link to Github for online store.">
+                  <span class="iconify" data-icon="radix-icons:github-logo"></span>
+                </a>
+                <a href="https://onlinestore-cb346.web.app" aria-label="Link to live demo for online store."
+                  ><span class="iconify" data-icon="material-symbols:live-tv"></span>
+                </a>
               </div>
             </div>
             <div class="project">
               <div class="projectTitle">Coloring Book Application</div>
               <div class="projectImage">
-                <a href="https://coloring-book-26967.web.app/">
-                  <img
-                    src="./img/ProjectImages/ColoringBookScreenshot.png"
-                    alt="Coloring Book Screenshot and Link"
-                    aria-label="Link to live demo for coloring book."
-                /></a>
+                <a href="https://coloring-book-26967.web.app/" aria-label="Link to live demo for coloring book.">
+                  <img src="./img/ProjectImages/ColoringBookScreenshot.png" alt="Coloring Book Screenshot and Link" />
+                </a>
               </div>
               <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/ColoringBook"
-                  ><span class="iconify" data-icon="radix-icons:github-logo" aria-label="Link to Github for coloring book."></span
-                ></a>
-                <a href="https://coloring-book-26967.web.app/"
-                  ><span class="iconify" data-icon="material-symbols:live-tv" aria-label="Link to live demo for coloring book."></span
-                ></a>
+                <a href="https://github.com/JustSteve2k/ColoringBook" aria-label="Link to Github for coloring book.">
+                  <span class="iconify" data-icon="radix-icons:github-logo"></span>
+                </a>
+                <a href="https://coloring-book-26967.web.app/" aria-label="Link to live demo for coloring book.">
+                  <span class="iconify" data-icon="material-symbols:live-tv"></span>
+                </a>
               </div>
             </div>
             <div class="project">
               <div class="projectTitle">Bidding Application</div>
               <div class="projectImage">
-                <a href="https://bid-calculator-f20ff.web.app">
-                  <img
-                    src="./img/ProjectImages/BiddingCalculatorScreenshot.png"
-                    alt="Bid Calculator Screenshot and Link"
-                    aria-label="Link to live demo for bid calculator."
-                /></a>
+                <a href="https://bid-calculator-f20ff.web.app" aria-label="Link to live demo for bid calculator.">
+                  <img src="./img/ProjectImages/BiddingCalculatorScreenshot.png" alt="Bid Calculator Screenshot and Link" />
+                </a>
               </div>
               <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/BidCalculator"
-                  ><span class="iconify" data-icon="radix-icons:github-logo" aria-label="Link to Github for Bid Calculator."></span
-                ></a>
-                <a href="https://bid-calculator-f20ff.web.app"
-                  ><span class="iconify" data-icon="material-symbols:live-tv" aria-label="Link to live demo for bid calculator."></span
-                ></a>
+                <a href="https://github.com/JustSteve2k/BidCalculator" aria-label="Link to Github for Bid Calculator.">
+                  <span class="iconify" data-icon="radix-icons:github-logo"></span>
+                </a>
+                <a href="https://bid-calculator-f20ff.web.app" aria-label="Link to live demo for bid calculator.">
+                  <span class="iconify" data-icon="material-symbols:live-tv"></span>
+                </a>
               </div>
             </div>
           </div>
