fix formMessage sizing

--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
                 <label for="email">Email</label>
                 <input id="formEmail" name="email" type="text" placeholder="yourEmail@email.com" required />
                 <label for="message">Message</label>
-                <textarea id="formMessage" name="message" placeholder="Hows it going?" required></textarea>
+                <textarea id="formMessage" class="formMessage" name="message" placeholder="Hows it going?" required></textarea>
                 <input type="text" name="_honey" style="display: none" />
                 <input type="hidden" name="_captcha" value="false" />
                 <button id="btnSubmit" type="submit">Submit</button>
