fix spelling error

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
             <h1 class="introHeader">Hey, Im Steve!</h1>
             <p class="introLine">Started off with Architecture,</p>
             <p class="introLine">I've decided to do change gears</p>
-            <p class="introLine">and persue web development.</p>
+            <p class="introLine">and pursue web development.</p>
           </div>
           <div id="introSvg" class="introSvg">
             <img src="./img/Arch Image.svg" class="mainImage" alt="Painting" />
